# spotify_mcp

./: .gitignore  LICENSE  README.md  SECURITY.md  config.env.example  pyproject.toml
.claude/agents/: dedup-reviewer.md  qa.md  security-reviewer.md
scripts/: cf-provision.sh  down.sh  run-server.sh  run-tunnel.sh  secrets.sh  set-secret.sh  up.sh
src/spotify_mcp/: __init__.py  auth.py  client.py  errors.py  models.py  regime.py  server.py  settings.py
src/spotify_mcp/tools/: __init__.py  follow.py  library.py  playback.py  playlists.py  profile.py  search.py
systemd/: spotify-mcp.service  spotify-tunnel.service
tests/: test_units.py
