[project]
name = "spotify-mcp"
version = "0.1.0"
description = "Private, full-feature Spotify MCP server (claude.ai custom connector via FastMCP + OAuthProxy)"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.14,<3",
    "httpx[http2]>=0.27",
    "uvicorn>=0.30",
]

[project.scripts]
spotify-mcp = "spotify_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spotify_mcp"]

[dependency-groups]
dev = ["ruff>=0.6", "pytest>=8"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501"]  # long URLs/tables; ruff format owns wrapping

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
